Fix: Add libavif setup step to GitHub Actions workflows
The CMake warnings occurred because the workflows were building without
libavif source code. The setup-android-libavif.sh script downloads libavif,
but it was never being run in CI/CD.

Changes:
- Add 'Setup Android libavif' step to both publish.yml and publish-ios.yml
- Run setup script before building to ensure libavif is available
- This ensures native AVIF support is included in published artifacts

Without this fix, the published AAR and XCFramework would be built in
placeholder mode (JPEG fallback) instead of with real AVIF support.

--- a/.github/workflows/publish-ios.yml
+++ b/.github/workflows/publish-ios.yml
@@ -40,6 +40,12 @@ jobs:
           kotlin.mpp.stability.nowarn=true
           EOF
 
+      - name: Setup Android libavif
+        run: |
+          chmod +x scripts/setup-android-libavif.sh
+          # Run setup script non-interactively (auto-answer "n" to update prompt if exists)
+          echo "n" | ./scripts/setup-android-libavif.sh || true
+
       - name: Extract version from tag
         id: get_version
         run: |
